--- a/src/GUI/Resources/dark.css
+++ b/src/GUI/Resources/dark.css
@@ -106,6 +106,7 @@ LibraryGenreView
 	selection-background-color: #424e72;
 }
 
+SearchableListView,
 LibraryView,
 LibraryGenreView,
 DirectoryTreeView,
