--- a/src/GUI/Covers/GUI_AlternativeCovers.ui
+++ b/src/GUI/Covers/GUI_AlternativeCovers.ui
@@ -95,6 +95,9 @@
        <height>220</height>
       </size>
      </property>
+     <property name="mouseTracking">
+      <bool>true</bool>
+     </property>
      <property name="verticalScrollBarPolicy">
       <enum>Qt::ScrollBarAsNeeded</enum>
      </property>
@@ -188,18 +191,6 @@
      </item>
      <item>
       <widget class="QPushButton" name="btn_cancel">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>80</width>
-         <height>0</height>
-        </size>
-       </property>
        <property name="focusPolicy">
         <enum>Qt::StrongFocus</enum>
        </property>
@@ -209,28 +200,19 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="btn_save">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
+      <widget class="QPushButton" name="btn_apply">
+       <property name="text">
+        <string>Apply</string>
        </property>
-       <property name="minimumSize">
-        <size>
-         <width>80</width>
-         <height>0</height>
-        </size>
-       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_ok">
        <property name="focusPolicy">
         <enum>Qt::StrongFocus</enum>
        </property>
        <property name="text">
-        <string>Save</string>
-       </property>
-       <property name="icon">
-        <iconset resource="../Resources/Icons.qrc">
-         <normaloff>:/Icons/save.svg.png</normaloff>:/Icons/save.svg.png</iconset>
+        <string>OK</string>
        </property>
        <property name="iconSize">
         <size>
@@ -294,9 +276,7 @@
    </item>
   </layout>
  </widget>
- <resources>
-  <include location="../Resources/Icons.qrc"/>
- </resources>
+ <resources/>
  <connections>
   <connection>
    <sender>rb_online</sender>
