--- a/src/GUI/TagEdit/GUI_TagEdit.ui
+++ b/src/GUI/TagEdit/GUI_TagEdit.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>938</width>
-    <height>562</height>
+    <height>644</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
@@ -223,21 +223,38 @@
         <item row="2" column="1">
          <widget class="TagTextInput" name="le_artist"/>
         </item>
-        <item row="3" column="1">
+        <item row="4" column="1">
          <widget class="TagTextInput" name="le_genre"/>
         </item>
-        <item row="3" column="0">
+        <item row="4" column="0">
          <widget class="QLabel" name="label_5">
           <property name="text">
            <string>Genres</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="2">
+        <item row="4" column="2">
          <widget class="QCheckBox" name="cb_genre_all">
           <property name="focusPolicy">
            <enum>Qt::StrongFocus</enum>
           </property>
+          <property name="text">
+           <string>all</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0">
+         <widget class="QLabel" name="label_11">
+          <property name="text">
+           <string>Album artist</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="1">
+         <widget class="QLineEdit" name="le_album_artist"/>
+        </item>
+        <item row="3" column="2">
+         <widget class="QCheckBox" name="cb_album_artist_all">
           <property name="text">
            <string>all</string>
           </property>
