--- a/src/GUI/TagEdit/GUI_TagEdit.ui
+++ b/src/GUI/TagEdit/GUI_TagEdit.ui
@@ -251,7 +251,7 @@
          </widget>
         </item>
         <item row="3" column="1">
-         <widget class="QLineEdit" name="le_album_artist"/>
+         <widget class="TagTextInput" name="le_album_artist"/>
         </item>
         <item row="3" column="2">
          <widget class="QCheckBox" name="cb_album_artist_all">
