--- a/src/GUI/Plugins/Stream/GUI_Podcasts.ui
+++ b/src/GUI/Plugins/Stream/GUI_Podcasts.ui
@@ -20,7 +20,7 @@
    <property name="verticalSpacing">
     <number>6</number>
    </property>
-   <item row="1" column="2">
+   <item row="1" column="0" colspan="2">
     <widget class="QComboBox" name="combo_stream">
      <property name="focusPolicy">
       <enum>Qt::StrongFocus</enum>
@@ -33,17 +33,7 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
-    <widget class="QLabel" name="label_2">
-     <property name="focusPolicy">
-      <enum>Qt::StrongFocus</enum>
-     </property>
-     <property name="text">
-      <string>Url</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="2">
+   <item row="2" column="0" colspan="2">
     <widget class="QLineEdit" name="le_url">
      <property name="focusPolicy">
       <enum>Qt::ClickFocus</enum>
@@ -53,7 +43,7 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="2">
+   <item row="3" column="0" colspan="2">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <property name="spacing">
       <number>6</number>
@@ -121,16 +111,6 @@
       </widget>
      </item>
     </layout>
-   </item>
-   <item row="1" column="1">
-    <widget class="QLabel" name="label">
-     <property name="focusPolicy">
-      <enum>Qt::StrongFocus</enum>
-     </property>
-     <property name="text">
-      <string>Name</string>
-     </property>
-    </widget>
    </item>
   </layout>
  </widget>
