--- a/src/GUI/DirectoryWidget/GUI_DirectoryWidget.ui
+++ b/src/GUI/DirectoryWidget/GUI_DirectoryWidget.ui
@@ -88,7 +88,14 @@
       <number>0</number>
      </property>
      <item>
-      <widget class="QComboBox" name="combo_libchooser"/>
+      <widget class="QComboBox" name="combo_libchooser">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+      </widget>
      </item>
      <item>
       <spacer name="horizontalSpacer">
@@ -113,16 +120,10 @@
      <item>
       <widget class="QLineEdit" name="le_search">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+        <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>16777215</width>
-         <height>25</height>
-        </size>
        </property>
        <property name="focusPolicy">
         <enum>Qt::ClickFocus</enum>
@@ -132,16 +133,10 @@
      <item>
       <widget class="QPushButton" name="btn_search">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>16777215</width>
-         <height>25</height>
-        </size>
        </property>
        <property name="focusPolicy">
         <enum>Qt::NoFocus</enum>
