--- a/src/GUI/InfoDialog/GUI_InfoDialog.ui
+++ b/src/GUI/InfoDialog/GUI_InfoDialog.ui
@@ -196,8 +196,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>98</width>
-               <height>32</height>
+               <width>100</width>
+               <height>30</height>
               </rect>
              </property>
              <layout class="QGridLayout" name="gridLayout_7">
@@ -266,7 +266,7 @@
                <x>0</x>
                <y>0</y>
                <width>98</width>
-               <height>32</height>
+               <height>31</height>
               </rect>
              </property>
              <layout class="QGridLayout" name="gridLayout_4">
@@ -369,11 +369,10 @@
               <height>0</height>
              </size>
             </property>
-            <property name="sizeIncrement">
-             <size>
-              <width>0</width>
-              <height>0</height>
-             </size>
+            <property name="font">
+             <font>
+              <pointsize>17</pointsize>
+             </font>
             </property>
             <property name="horizontalScrollBarPolicy">
              <enum>Qt::ScrollBarAlwaysOff</enum>
@@ -405,6 +404,42 @@
               </property>
               <property name="value">
                <number>0</number>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer name="horizontalSpacer_4">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QSpinBox" name="sb_zoom">
+              <property name="minimum">
+               <number>100</number>
+              </property>
+              <property name="maximum">
+               <number>500</number>
+              </property>
+              <property name="singleStep">
+               <number>10</number>
+              </property>
+              <property name="value">
+               <number>100</number>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLabel" name="label">
+              <property name="text">
+               <string>%</string>
               </property>
              </widget>
             </item>
